[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mta-gtfs-rt"
version = "0.1.0"
description = "Python library for accessing MTA GTFS-RT feeds for NYC transit"
readme = "README.md"
authors = [
    {name = "MTA GTFS-RT Contributors"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
dependencies = [
    "gtfs-realtime-bindings>=1.0.0",
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/OnFreund/mta-gtfs-rt"
Issues = "https://github.com/OnFreund/mta-gtfs-rt/issues"

[tool.setuptools.packages.find]
include = ["mta_gtfs_rt*"]
exclude = ["tests*"]
